Atualizando favicon e hero

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Lucas Greory</title>
     <link rel="stylesheet" href="./dist/css/main.css">
+    <link rel="shortcut icon" href="./dist/images/faviconL.ico" type="image/x-icon">
 </head>
 <body>
     <section class="hero">
@@ -17,22 +18,22 @@
             </p>
             <ul class="hero__content__links">
                 <li class="hero__content__links--icon">
-                    <a href="">
+                    <a href="https://github.com/oLucasGregory" target="_blank">
                         <img src="./dist/images/icons/icons8-git.svg" alt="">
                     </a>
                 </li>
                 <li class="hero__content__links--icon">
-                    <a href="">
+                    <a href="https://www.instagram.com/olucasgregory/" target="_blank">
                         <img src="./dist/images/icons/icons8-instagram-50.png" alt="">
                     </a>
                 </li>
                 <li class="hero__content__links--icon">
-                    <a href="">
+                    <a href="https://www.linkedin.com/in/lucas-gregory-553960304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                         <img src="./dist/images/icons/linkdin.svg" alt="">
                     </a>
                 </li>
                 <li class="hero__content__links--icon">
-                    <a href="">
+                    <a href="https://x.com/olucasgregory" target="_blank">
                         <img src="./dist/images/icons/x.png" alt="">
                     </a>
                 </li>
@@ -43,7 +44,7 @@
         <h2 class="title">Projetos recentes</h2>
         <ul class="portifolio__list">
             <li class="portifolio__list--item">
-               <a href="https://clone-disney-plus-8fat.vercel.app/" target="_blank">
+               <a href="https://clone-disney-taupe-gamma.vercel.app/" target="_blank">
                 <img src="./dist/images/projetos/disney+_clone.jpg" alt="">
                 <p class="text">Clone Disney+</p>
                </a>
