--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Greory</title>
+    <title>Lucas Gregory</title>
     <link rel="stylesheet" href="./dist/css/main.css">
     <link rel="shortcut icon" href="./dist/images/faviconL.ico" type="image/x-icon">
 </head>
