--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
     <link rel="shortcut icon" href="./dist/images/faviconL.ico" type="image/x-icon">
 </head>
 <body>
-    <section class="hero">
+    <section class="hero hidden">
         <div class="hero__content">
             <div class="hero__content__name">
                <h1 class="title">Lucas Gregory</h1>
             </div>
             <p class="text">
-                Desenvolvedor Web
+                Desenvolvedor Front End
             </p>
             <ul class="hero__content__links">
-                <li class="hero__content__links--icon">
+                <li class="hero__content__links--icon hidden">
                     <a href="https://github.com/oLucasGregory" target="_blank">
                         <img src="./dist/images/icons/icons8-git.svg" alt="">
                     </a>
                 </li>
-                <li class="hero__content__links--icon">
+                <li class="hero__content__links--icon hidden">
                     <a href="https://www.instagram.com/olucasgregory/" target="_blank">
                         <img src="./dist/images/icons/icons8-instagram-50.png" alt="">
                     </a>
                 </li>
-                <li class="hero__content__links--icon">
+                <li class="hero__content__links--icon hidden">
                     <a href="https://www.linkedin.com/in/lucas-gregory-553960304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                         <img src="./dist/images/icons/linkdin.svg" alt="">
                     </a>
                 </li>
-                <li class="hero__content__links--icon">
+                <li class="hero__content__links--icon hidden">
                     <a href="https://x.com/olucasgregory" target="_blank">
                         <img src="./dist/images/icons/x.png" alt="">
                     </a>
@@ -40,28 +40,59 @@
             </ul>
         </div>
     </section>
-    <section class="portifolio">
+    <section class="skills hidden">
+        <h2 class="title">
+            Habilidades Dominadas
+        </h2>
+        <ul class="skills__list">
+            <li class="skills__list__icon hidden">
+             <img src="dist/images/skills/icons8-javascript.svg" alt="">
+            </li>
+            <li class="skills__list__icon hidden">
+                <img src="dist/images/skills/icons8-react.svg" alt="">
+            </li>
+            <li class="skills__list__icon hidden">
+                <img src="dist/images/skills/icons8-html.svg" alt="">
+            </li>
+            <li class="skills__list__icon hidden">
+                <img src="dist/images/skills/icons8-css.svg" alt="">
+            </li>
+            <li class="skills__list__icon hidden">
+                <img src="dist/images/skills/icons8-bootstrap.svg" alt="">
+             </li>
+            <li class="skills__list__icon hidden">
+                <img src="dist/images/skills/icons8-gulp.svg" alt="">
+            </li>
+            <li class="skills__list__icon hidden">
+                <img src="dist/images/skills/icons8-sass.svg" alt="">
+            </li>
+            <li class="skills__list__icon hidden">
+                <img src="dist/images/skills/icons8-less-logo.svg" alt="">
+            </li>
+        </ul>
+    </section>
+    <section class="portifolio hidden">
         <h2 class="title">Projetos recentes</h2>
         <ul class="portifolio__list">
-            <li class="portifolio__list--item">
+            <li class="portifolio__list--item hidden">
                <a href="https://clone-disney-taupe-gamma.vercel.app/" target="_blank">
                 <img src="./dist/images/projetos/disney+_clone.jpg" alt="">
                 <p class="text">Clone Disney+</p>
                </a>
             </li>
-            <li class="portifolio__list--item">
+            <li class="portifolio__list--item hidden">
                 <a href="https://loja-de-musica-sigma.vercel.app/" target="_blank">
                  <img src="./dist/images/projetos/music_store.jpg" alt="Music Store">
                  <p class="text">Music Store</p>
                 </a>
              </li>
-             <li class="portifolio__list--item">
+             <li class="portifolio__list--item hidden">
                 <a href="https://nerdalize-portal-nerd.vercel.app/" target="_blank">
                  <img src="./dist/images/projetos/portal_nerd.jpg" alt="Portal nerd">
                  <p class="text">Portal nerd</p>
                 </a>
              </li>
-             <li class="portifolio__list--item">
+             <li class="portifolio__list--item hidden">
                 <a href="https://wave-shoes.vercel.app/" target="_blank">
                  <img src="./dist/images/projetos/wave_shoes.jpg" alt="Wavw shoes">
                  <p class="text">Wave Shoes</p>
@@ -70,5 +101,6 @@
         </ul>
 
     </section>
+    <script src="./dist/js/main.js"></script>
 </body>
 </html>
